Fixed issue with white space around image in recipe-card. Added a heading to the random container and changed border colour of recipe-cards

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,17 @@ body{
     margin: 0 auto;
 }
 
+.secondary-heading{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: 1/-1;
+    height: 8rem;
+    font-size: 2rem;
+    font-variant: small-caps;
+    color: #ee2560;
+}
+
 .filter-heading{
     font-size: 1.5rem;
     padding: .2rem;
@@ -172,7 +183,6 @@ input#recipe-search{
 .random-container {
     display: grid;
     box-sizing: border-box;
-    grid-template-rows: repeat(12, 3fr);
     grid-template-columns: repeat(1, 1fr);
     width: 95%;
     margin: 0 auto;
@@ -182,7 +192,7 @@ input#recipe-search{
     display: flex;
     flex-direction: column;
     margin: 1rem;
-    border: 1px solid #08182b;
+    border: 1px solid #ee2560;
     box-sizing: border-box;
     transition: scale 1s cubic-bezier(0.8, 0.5, 0.2, 0.8); 
 } 
@@ -224,6 +234,12 @@ input#recipe-search{
     font-variant: small-caps;
     font-weight: 600;
     line-height: 1.5rem;
+}
+
+.recipe-head>img.recipe-img{
+    height: 18rem;
+    padding: 0;
+    width: 100%;
 }
 
 /************************Button Styles*/
@@ -389,8 +405,7 @@ input#recipe-search{
     font-variant: small-caps;
 }
 
-.single-img,
-.recipe-img{
+.single-img>img.recipe-img{
     width: 100%;
     border-radius: 2rem;
     padding: 1rem 0;
@@ -644,7 +659,7 @@ input#recipe-search{
     .recipe-container,
     .random-container{
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 2fr);
+        /* grid-template-rows: repeat(6, 2fr); */
         margin: 0 auto;
         width: 100%;
     }
@@ -735,7 +750,7 @@ input#recipe-search{
 @media screen and (min-width: 780px) {
     .recipe-container,
     .random-container{
-        grid-template-rows: repeat(4, 1fr);
+        /* grid-template-rows: repeat(4, 1fr); */
         grid-template-columns: repeat(3, 1fr);
         grid-gap: .2rem;
         width: 100%;
@@ -822,11 +837,15 @@ input#recipe-search{
 @media screen and (min-width: 1000px) {
     .recipe-container,
     .random-container{
-        grid-template-rows: repeat(3, 3fr);
+        /* grid-template-rows: repeat(3, 3fr); */
         grid-template-columns: repeat(4, 1fr);
         grid-gap: .5rem;
         margin: 0 auto;
         width: 100%;
+    }
+
+    .secondary-heading{
+        font-size: 3rem;
     }
 
     .single-container{
